--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
 	"compilerOptions": {
 		"baseUrl": "./src",
 		"paths": {
-			"@api": ["api"],
-			"@assets": ["assets"],
+			"@api/*": ["api/*"],
+			"@assets/*": ["assets/*"],
 			"@components": ["components"],
 			"@contexts": ["contexts"],
 			"@hooks": ["hooks"],
