Create Input component + Login Form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 			"@styles": ["styles"],
 			"@types": ["types"],
 			"@utils": ["utils"],
+			"@validation": ["validation"],
 			"@views": ["views"]
 		},
 		"target": "es5",
